force-app/main/default/objects/Unit_Attempt__c.object
<CustomObject>
    <description>Unit (Subject) enrolment of the student.</description>
    <fields>
        <fullName>ASN_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field for excluding unit attempts from the ASN form.</description>
        <inlineHelpText>A flag for specifically excluded unit attempts.</inlineHelpText>
        <label>ASN Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASN_Response_Date__c</fullName>
        <description>Captures the date when Student chose to change their results from the ASN form.</description>
        <inlineHelpText>Captures the date when Student chose to change their results from the ASN form.</inlineHelpText>
        <label>ASN Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASN_Response_Datetime__c</fullName>
        <description>Captures the datetime when Student chose to change their results from the ASN form.</description>
        <inlineHelpText>Captures the datetime when Student chose to change their results from the ASN form.</inlineHelpText>
        <label>ASN Response Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASN_Response__c</fullName>
        <description>To hold ASN Response selection of the student - will contain either WDN or SFR</description>
        <inlineHelpText>To hold ASN Response selection of the student - will contain either WDN or SFR</inlineHelpText>
        <label>ASN Response</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <description>The academic year which the unit is attempted (started) in.</description>
        <label>Academic Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achieved_Credit_Points__c</fullName>
        <description>Credit points granted if the unit attempt was passed</description>
        <label>Achieved Credit Points</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Administrative_Unit_Status__c</fullName>
        <label>Administrative Unit Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Sequence_Number__c</fullName>
        <description>Calendar sequence number</description>
        <label>CI Sequence Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Type__c</fullName>
        <description>Type of the academic calendar associated with the unit attempt. This is referrenced in forming the External ID of Unit Attempt.</description>
        <label>Calendar Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <description>Parent course attempt which the unit attempt is associated with.</description>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Unit Attempts</relationshipLabel>
        <relationshipName>Unit_Attempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Course code which the unit is attempted under by the student.</description>
        <formula>Course_Attempt__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_In_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the record has been deleted in the source system and the record is a candidate for hard delete in Salesforce.

Records marked as deleted in source need to be catered for in reporting etc.</description>
        <label>Deleted In Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <description>Date when the unit attempt has been discontinued for the student.</description>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFTSL__c</fullName>
        <label>EFTSL</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_Credit_Points__c</fullName>
        <label>Enrolled Credit Points</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolment_Date__c</fullName>
        <description>Date when the unit attempt is enrolled in for the student.</description>
        <label>Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Grade/Result given to the student on completed unit attempt.</description>
        <label>Result</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Teaching location code of the unit attempt.</description>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Owner Org Unit - key is Org Unit Code and Org Unit Start Date</description>
        <label>Managing Faculty</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unit Attempts</relationshipLabel>
        <relationshipName>Unit_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <description>Mark given to the student on completed unit attempt.</description>
        <label>Mark</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome_Date__c</fullName>
        <description>Date when the outcome of the unit attempt has been set.</description>
        <label>Outcome Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_Finalised__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirms if the outcome has been finalised for the unit attempt.

All records received from Callsita are finalised (SQL enrichment filter enforced)</description>
        <label>Outcome Finalised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Credit_Points_Reason__c</fullName>
        <description>Describe the reason behind the credit points override.</description>
        <label>Override Credit Points Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Callista Person ID as received via the integration</description>
        <label>Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <description>Populated with now() when the Outcome_Date__c field is populated/changed. It does not contain the value of the outcome date, rather it timestamps when it changes.</description>
        <inlineHelpText>Result Published Date</inlineHelpText>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result_Type__c</fullName>
        <label>Result Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAIL</fullName>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>INCOMP</fullName>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>PASS</fullName>
                    <label>Pass</label>
                </value>
                <value>
                    <fullName>WITHDRAWN</fullName>
                    <label>Withdrawn</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Waived_Comments__c</fullName>
        <description>Comments behind the waived rule on the unit attempt.</description>
        <label>Rule Waived Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Waived_Date__c</fullName>
        <description>Date when the waiving of the rule is applied on the unit attempt.</description>
        <label>Rule Waived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUA_External_Id__c</fullName>
        <description>External identifier of the student unit attempt. It is a combination of Person I, Unit Code, Calendar Type and Academic Year in the following format:
PERSON_ID-UNIT_CODE-CALENDAR_TYPE-ACADEMIC_YEAR
e.g. 12345678-EDF4122-ACAD-YR-2018</description>
        <externalId>true</externalId>
        <label>SUA External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <label>Short Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_Official_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Official Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the student&apos;s unit attempt</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Discontin</fullName>
                    <label>Discontinued</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Unconfirm</fullName>
                    <label>Unconfirmed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Person_ID__c</fullName>
        <description>Contains the Person_ID_unique__c of the related Student (Contact)</description>
        <formula>Student__r.Person_ID_unique__c</formula>
        <label>Student Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student attemtping this specific unit attempt.</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Unit Attempts</relationshipLabel>
        <relationshipName>Unit_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teaching_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Teaching calendar associated to the specific unit attempt.</description>
        <label>Teaching Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Unit Attempts</relationshipLabel>
        <relationshipName>Unit_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teaching_Period__c</fullName>
        <label>Teaching Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reports the Callista OU that has the major TR for the unit.</description>
        <inlineHelpText>The Callista Org Unit with the major teaching responsibility for the Unit.</inlineHelpText>
        <label>Teaching Responsibility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unit Attempts (Teaching Responsibility)</relationshipLabel>
        <relationshipName>Responsibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Unit Title</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Class__c</fullName>
        <label>Unit Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DAY</fullName>
                </value>
                <value>
                    <fullName>EVENING</fullName>
                </value>
                <value>
                    <fullName>ESP-EC</fullName>
                    <label>ESP ENHANCEMENT CENTRE</label>
                </value>
                <value>
                    <fullName>ESP-TC</fullName>
                    <label>ESP DISTANCE TUTORIAL CENTRE</label>
                </value>
                <value>
                    <fullName>WEEKEND</fullName>
                </value>
                <value>
                    <fullName>RES-DAY</fullName>
                    <label>DAY RESIDENTIAL</label>
                </value>
                <value>
                    <fullName>RES-EVEN</fullName>
                    <label>EVENING RESIDENTIAL</label>
                </value>
                <value>
                    <fullName>BLOCK</fullName>
                </value>
                <value>
                    <fullName>BLOCK-ON</fullName>
                    <label>BLOCK OF ON CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>DISTANCE EDUCATION</label>
                </value>
                <value>
                    <fullName>OFF-EVEN</fullName>
                    <label>OFF CAMPUS EVENING CLASS</label>
                </value>
                <value>
                    <fullName>OFF-DAY</fullName>
                    <label>OFF CAMPUS DAY CLASS</label>
                </value>
                <value>
                    <fullName>OPEN-LEARN</fullName>
                    <label>OPEN LEARNING</label>
                </value>
                <value>
                    <fullName>BLOCK-OFF</fullName>
                    <label>BLOCK OF OFF CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>FLEXIBLE</fullName>
                    <label>FLEXIBLE CLASS WITH ON AND OFF CAMPUS LEARNING</label>
                </value>
                <value>
                    <fullName>SPLIT-ON</fullName>
                    <label>SPLIT BLOCK ON CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>SPLIT-OFF</fullName>
                    <label>SPLIT BLOCK OFF CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>EXT-CAND</fullName>
                    <label>EXTERNAL RESEARCH CANDIDATURE</label>
                </value>
                <value>
                    <fullName>WEEKEND-ON</fullName>
                    <label>WEEKEND ON CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>WEEKEND-OF</fullName>
                    <label>WEEKEND OFF CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>DAY-OFF</fullName>
                </value>
                <value>
                    <fullName>EVEN-OFF</fullName>
                </value>
                <value>
                    <fullName>OPEN-ONLIN</fullName>
                    <label>OPEN LEARNING - ONLINE DELIVERY ONLY</label>
                </value>
                <value>
                    <fullName>EXAMCLIENT</fullName>
                    <label>COMMERCIAL CLIENT - EXAM ONLY</label>
                </value>
                <value>
                    <fullName>OCL</fullName>
                    <label>OFFCAMPUS LEARNING - PRINT DELIVERY</label>
                </value>
                <value>
                    <fullName>OCL-ONLINE</fullName>
                    <label>OFFCAMPUS LEARNING - PRINT &amp; ONLINE DELIVERY</label>
                </value>
                <value>
                    <fullName>OCL-RESBLK</fullName>
                    <label>OFFCAMPUS LEARNING - WITH RESIDENTIAL BLOCK</label>
                </value>
                <value>
                    <fullName>ONLINE</fullName>
                    <label>FULLY ELECTRONIC DELIVERY</label>
                </value>
                <value>
                    <fullName>ONLINE-DAY</fullName>
                    <label>ELECTRONIC DELIVERY FOR DAY STUDENTS</label>
                </value>
                <value>
                    <fullName>DE-ONLINE</fullName>
                    <label>DISTANCE EDUCATION - PRINT &amp; ONLINE DELIVERY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>Code of the attempted unit.</description>
        <label>Unit Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Level__c</fullName>
        <label>Unit Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Mode__c</fullName>
        <label>Unit Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Unit_Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ON</fullName>
                    <label>ON CAMPUS</label>
                </value>
                <value>
                    <fullName>OFF</fullName>
                    <label>OFF CAMPUS</label>
                </value>
                <value>
                    <fullName>COMPOSITE</fullName>
                    <label>ON/OFF CAMPUS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Unit Offering for the Unit Attempt</description>
        <inlineHelpText>Link to Unit Offering for the Unit Attempt</inlineHelpText>
        <label>Unit Offering</label>
        <referenceTo>Unit_Offering__c</referenceTo>
        <relationshipLabel>Unit Attempts</relationshipLabel>
        <relationshipName>Unit_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Version__c</fullName>
        <description>Version of the attempted unit.</description>
        <label>Unit Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <label>Updated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Unit Attempt</label>
    <listViews>
        <fullName>ASN_Unit_Attempts</fullName>
        <columns>NAME</columns>
        <columns>Course_Attempt__c</columns>
        <columns>Student_Person_ID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASN_Response_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ASN Unit Attempts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Managing_Faculty__c</columns>
        <columns>Course_Attempt__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Student_Person_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Administrative_Unit_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>